Prepping for scroll header + fixed a spacing issue

--- a/site/styles/styles_index.css
+++ b/site/styles/styles_index.css
@@ -22,7 +22,6 @@ h1 {
     float: left;
     width: 1200px;
     height: 45px;
-    margin-top: 80px;
     padding: 30px;
     background-color: var(--macLavender);
     color: black;
